--- a/style.css
+++ b/style.css
@@ -6,15 +6,22 @@ body {
   line-height: 1.5;
 }
 .header{
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
+  display:inline;
 }
 .container__input{
-  display: flex;
-	flex-direction: column;
+  display:block;
   width: 300px;
-  justify-content: center;
-  align-items: center;
+  float:left;
+  border-style: solid;
+  border-left: 0px solid;
+  border-right: 1px solid #E0E0E0;
+  border-top: 0px solid;
+  border-bottom: 0px solid;
+}
+.container__table{
+float:right
 }
 .button {
     background-color: #6200EE; /* Green */
@@ -23,7 +30,7 @@ body {
     width: 110px;
     height: 35px;
     text-align: center;
-    margin-left: 50px;
+    margin-left: 95px;
     font-size: 15px;
     font-weight:700;
     text-transform:uppercase ;
@@ -34,9 +41,7 @@ body {
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
   }
-
   .input{
-    align-items: flex-end;
     padding: 8px;
     height: 35px;
     margin-top: 20px;
@@ -49,12 +54,11 @@ body {
       border-collapse: collapse;
       text-align: center;
       margin-top: 20px;
-      margin-left: 100px;
+      margin-right: 300px;
       font-size: 0.9em;
-      min-width: 400px;
+      min-width: 800px;
       border-spacing: 0;
       border-style: hidden;
-      font-family:Roboto;
   }
   table, th, td {
       border-left: 0px solid;
