--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 *{
   box-sizing: border-box;
 }
-body {
+html, body {
   font-family:Roboto, sans-serif;
   line-height: 1.5;
+  height: 100%;
+
 }
 .header{
   /* display: flex;
@@ -13,6 +15,7 @@ body {
 .container__input{
   display:block;
   width: 300px;
+  height: 100%;
   float:left;
   border-style: solid;
   border-left: 0px solid;
